# games

./: 2048.c  CMakeLists.txt  GameStart.c  bricks.c  readme.txt  snack.c  snake1.c  snake2.c  snake3.c
inc/: 2048.h  bricks.h
src/: 2048.c  CMakeLists.txt  bricks.c
